--- a/pages/about_us.html
+++ b/pages/about_us.html
@@ -3,17 +3,36 @@
 
 <head>
   <meta charset="utf-8">
-  <title>О нас</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>О нас. Estart.by</title>
+  <meta name="description" content="Знакомьтесь — Estart.by, ваш надёжный автоэлектрик в Минске! Устали от проблем с электрооборудованием вашего авто?
+  Мы — решение. Профессиональный подход, современные диагностические методы и выездной сервис. Почувствуйте разницу в качестве и скорости работы с Estart.by.
+   Не ждите, пока мелкая поломка перерастёт в большую проблему — свяжитесь с нами прямо сейчас!"
+  >
+  <meta name="keywords" content="
+стартер,
+генератор,
+ремонт,
+ремонт стартер,
+ремонт генератор,
+автоэлектрик,
+о нас,
+естарт,
+естарт бай,
+estart,
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Немного о нашей компании | Estart.by">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/about_us.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="../css/about_us.css">
@@ -65,15 +84,11 @@
 <div class="content">
   <div class="content-left__box">
     <h2>О нас</h2>
-    <h3>Мы предлагаем полный спектр услуг для владельцев транспортных средств, находящихся в Минске. Все услуги
-      выполняются высококвалифицированными мастерами. Мы справимся с любой проблемой автомобиля.</h3>
     <p>
-      Мы предлагаем полный спектр услуг для владельцев
-      транспортных средств в Минске. Наши специалисты знают, как обращаться с широким
-      спектром автомобильных услуг. Независимо от того, водите ли вы легковой автомобиль,
-      грузовик среднего размера или внедорожник, наши механики приложат все усилия,
-      чтобы ваш автомобиль работал наилучшим образом, прежде чем покинет наш автосервис.
-      Быстрый ремонт электрооборудования в кратчайшие сроки!
+      Мы предлагаем полный спектр услуг для владельцев транспортных средств в Минске. Наши специалисты знают, как обращаться с широким спектром автомобильных услуг.
+      Независимо от того, водите ли вы легковой автомобиль, грузовик среднего размера или внедорожник, наши механики приложат все усилия, чтобы ваш автомобиль работал наилучшим образом, прежде чем покинет наш автосервис или место поломки.
+      Мы предлагаем быстрый ремонт стартеров, генераторов в кратчайшие сроки и так же быстрый запуск двигателя прямо на месте остановки Вашего автомобиля.
+
     </p>
     <br>
     <div class="classes" style="clear: both;"></div>
@@ -85,9 +100,7 @@
       <li>СТО по адресу <a href="../pages/contacts.html">Переулок Ольшевского 7/9</a> 3-й этаж. Помещение 320.</li>
       <li>Удобное время-провождение при ремонте автомобиля на СТО. Удобный диван, телевизор, чай/кофе.</li>
       <li>Быстрый и качественный ремонт любой марки авто. Наши специалисты знают как делать быстро и качественно!</li>
-      <li>Наша компания первая в Минске, которая предоставляет <b>РАСШИРЕННУЮ ГАРАНТИЮ</b> на ремонт вашего автомобиля!
-        <br>
-      </li>
+
     </ol>
     <p>
 
