--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -3,17 +3,35 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Контакты</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Контакты | Estart.by</title>
+  <meta name="description" content="Нужен надежный автоэлектрик в Минске? Свяжитесь с Estart.by прямо сейчас!
+  Мы доступны по нескольким номерам (МТС, А1) и готовы приехать к вам для оперативного решения проблем.
+  Не упустите шанс сэкономить время и нервы — звоните или пишите в чат. Ваши контакты — первый шаг к качественному и быстрому ремонту. Доверьте свое авто профессионалам!"
+  >
+  <meta name="keywords" content="
+контакты,
+естарт бай,
+естарт,
+автоэлектрик,
+сто,
+минск,
+estart,
+ремонт авто,
+СТО,
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Контакты | Estart.by">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/contacts.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="../css/contacts.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -99,7 +117,6 @@
           <li><a href="services/diagnostika.html">Компьютерная диагностика</a></li>
           <li><a href="services/repair_electricity.html">Автоэлектрик</a></li>
           <li><a href="services/STO.html">СТО</a></li>
-          <li><a href="argon_svarka.html">Аргонная сварка</a></li>
         </ul>
       </div>
       <div class="footer-col">
