--- a/pages/services.html
+++ b/pages/services.html
@@ -3,17 +3,33 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Услуги</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Услуги | Estart.by</title>
+  <meta name="description" content="Ищете надежное СТО или выездного автоэлектрика в Минске? Estart.by предлагает широкий спектр услуг по ремонту и обслуживанию автомобилей.
+  От быстрого выездного ремонта до комплексного обслуживания — мы решим любую вашу проблему! Свяжитесь с нами и получите качественный сервис от проверенных профессионалов. Действуйте сейчас — ваш автомобиль заслуживает лучшего!"
+  >
+  <meta name="keywords" content="
+услуги,
+естарт,
+естарт бай,
+автоэлектрик,
+СТО,
+выездной ремонт,
+цены,
+estart,
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Выездной ремонт Вашего авто в Минске!">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" href="../css/services.css">
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -75,7 +91,7 @@
       <ion-icon name="construct-outline"></ion-icon>
       <!-- <hr>-->
       <p>
-        Ремонт стартера любой марки авто. Ремонтируем стартера легковых, грузовых и спец.транспорта.
+        Ремонт стартера любой марки авто. Ремонтируем стартера легковых, грузовых и спец. транспорта.
       </p>
     </div>
 
@@ -245,7 +261,6 @@
       <div class="footer-col">
         <h4>Популярные услуги</h4>
         <ul>
-          <li><a href="argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="services/viezdnoy_remont.html">Выездной ремонт</a></li>
           <li><a href="services/repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="services/repair_starter.html">Ремонт стартера</a></li>
