--- a/pages/services/STO.html
+++ b/pages/services/STO.html
@@ -3,17 +3,47 @@
 
 <head>
   <meta charset="utf-8">
-  <title>СТО</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>СТО | Estart.by</title>
+  <meta name="description" content="Ищите надежное СТО в Минске? Мы предлагаем полный спектр услуг по ремонту и обслуживанию вашего автомобиля.
+  Профессиональные мастера, современное оборудование, конкурентные цены и гарантия на все виды работ.
+  Позаботьтесь о своем авто сегодня — звоните и записывайтесь на диагностику или ремонт!"
+  >
+  <meta name="keywords" content="
+Профессиональное СТО в Минске,
+СТО для иномарок Минск,
+Автомобильное СТО с гарантией Минск,
+СТО с полным комплексом услуг Минск,
+СТО с высоким рейтингом в Минске,
+СТО в Минске,
+СТО в Минск,
+СТО,
+СТО Минск цены,
+СТО ремонт авто Минск,
+Лучшее СТО в Минске,
+СТО диагностика Минск,
+Быстрое СТО Минск,
+СТО Минск,
+Ремонт авто Минск,
+Автосервис Минск,
+ТО Минск,
+Диагностика авто Минск,
+естарт,
+естарт бай,
+estart,
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <meta property="og:title" content="СТО по адресу Переулок Ольшевского 7к9">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services/STO.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
+
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="../../css/services/STO.css">
@@ -65,9 +95,8 @@
     <h2>СТО:</h2>
   </div>
   <p>
-   Компания Estart рада предложить качественные услуги по ремонту автомобилей в центре Минска. Можно доехать с любой точки, СТО расположено по адресу: Переулок Ольшевского 7/9. 3 этаж. Помещение 320.
-    Приезжая к нам, вы экономите время и деньги. Ремонт авто не более трех дней! При быстром ремонте, вы можете ожидать свой автомобиль в комнате для ожидания, где вам предложат чай/кофе или поиграть в приставку.
-    Ждем вас!
+    Компания Estart предоставляет качественные услуги по ремонту автомобилей в центре Минска. Наш автосервис находится по адресу: Переулок Ольшевского 7/9, 3 этаж, помещение 320.
+    Мы предлагаем быстрый ремонт автомобилей, который не займет более трех дней (в редких случаях дольше). При быстром ремонте вы можете ожидать свой автомобиль в комнате для ожидания, где вам предложат чай/кофе или поиграть в приставку.
   </p>
   <h4>Почему стоит выбрать нас?</h4>
   <ol>
@@ -167,7 +196,6 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
-          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
           <li><a href="diagnostika.html">Диагностика</a></li>
