--- a/pages/services/repaier_alternator.html
+++ b/pages/services/repaier_alternator.html
@@ -3,17 +3,59 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ремонт генератора</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ремонт генератора | Estart.by</title>
+  <meta name="description" content="Нужен надежный и быстрый ремонт генератора в Минске? Обращайтесь к нам! Выездной ремонт, опытные мастера и доступные цены. Гарантия качества на все работы. Звоните сейчас и верните своему авто прежнюю мощь!">
+  <meta name="keywords" content="
+ремонт генератора,
+ремонт генераторов,
+ремонт генератора минск,
+замена генератора,
+замена генератора минск,
+минск,
+цена,
+поломка генератора,
+неисправность генератора,
+регулировка генератора,
+шумит генератор,
+диагностика генератора,
+проверка генератора,
+сбои в работе генератора,
+ремонт ротора генератора,
+замена щеток генератора,
+ремонт выпрямителя генератора,
+проблемы с генератором на авто,
+генератор не работает,
+генератор не заряжает АКБ,
+выездной ремонт генератора,
+выездной ремонт генератора Минск,
+ремонт генератора на выезд Минск,
+выезд мастера генераторы Минск,
+выездное обслуживание генераторов Минск,
+ремонт генератора на дому Минск,
+поломка генератора - выезд мастера Минск,
+мастер по генераторам на выезд Минск,
+выезд специалиста генераторы Минск,
+диагностика генератора на выезд Минск,
+замена генератора на дому Минск,
+шумит генератор - вызов мастера Минск,
+срочный ремонт генератора на выезд Минск,
+естарт,
+естарт бай,
+estart,
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <meta property="og:title" content="Быстрый ремонт генератора в Минске">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services/repaier_alternator.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
+
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="../../css/services/repair_alternator.css">
@@ -63,16 +105,19 @@
 
 <div class="main-content">
     <div class="main-content__title">
-      <h2>Ремонт генератора:</h2>
+      <h2>Профессиональный ремонт генератора в Минске</h2>
     </div>
   <p>
-    Прежде всего, остановимся на основных функциях генератора авто.
-    Все современные авто оснащаются огромным количеством
-    разного электрооборудования, такие как акустическая система,
-    мониторы, подсветка и т.д. Чтобы обеспечить все эти потребители
-    используется аккумулятор и генератор. Таким образом, основными
-    функциями генератора являются: подзарядка аккумулятора и питание электрооборудования,
-    установленного в автомобиле.
+    <b>Ремонт генератора</b> - это важная процедура, которая позволяет поддерживать бесперебойную работу автомобиля.
+    Генератор является ключевым элементом системы питания, который обеспечивает подзарядку аккумулятора и питание всех электрических систем, установленного в автомобиле (нужно же телефон заряжать или включить кондиционер, когда жарко).
+    <br> <br>
+    Если вы заметили признаки неисправности генератора, такие как затрудненный запуск мотора, тусклый или мигающий свет, на приборной панели загорается индикатор Аккумулятора, звон или неприятный свист исходящий от генератора или шумит ремень генератора, то необходимо обратиться к специалистам.
+    <br> <br>
+    Наш автосервис предоставляет услуги по <b>ремонту генераторов любых марок автомобилей</b>. Наши опытные мастера быстро и качественно проведут диагностику и ремонт генератора вашего автомобиля.
+    Мы используем только качественные запчасти и современное оборудование, чтобы обеспечить долгую и надежную работу вашего автомобиля.
+
+    <b>Не откладывайте ремонт генератора на потом!</b> Обращайтесь к нам прямо сейчас и получите <b>Бесплатную Консультацию</b> и профессиональную помощь в поддержании работоспособности вашего автомобиля.
+
   </p>
   <h4>Признаки неисправности генератора:</h4>
   <ol>
@@ -80,7 +125,7 @@
     <li>Тусклый или мигающий свет</li>
     <li>На приборной панели загорается индикатор Аккумулятора</li>
     <li>Звон или неприятный свист исходящий от генератора</li>
-    <li>Шумит ременной привод генератора</li>
+    <li>Шумит ремень генератора</li>
   </ol>
   <h4>Цены:</h4>
   <table>
@@ -177,7 +222,6 @@
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
           <li><a href="diagnostika.html">Диагностика</a></li>
-          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="STO.html">СТО</a></li>
         </ul>
       </div>
