--- a/pages/services/repair_electricity.html
+++ b/pages/services/repair_electricity.html
@@ -4,17 +4,48 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Автоэлектрик</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Автоэлектрик | Estart.by</title>
+  <meta name="description" content="Ищете опытного автоэлектрика в Минске с возможностью выезда на место? Мы предлагаем быстрый и надежный ремонт всех видов автоэлектроники.
+  Высококвалифицированные специалисты, доступные цены и гарантия качества. Не ждите, пока проблема усугубится! Звоните прямо сейчас!"
+  >
+  <meta name="keywords" content="
+Сертифицированный автоэлектрик в Минске,
+Выездной ремонт электропроводки Минск,
+Экстренный выезд автоэлектрика Минск,
+Срочная установка автоэлектроники Минск,
+Экспертная диагностика автоэлектрики Минск,
+Автоэлектрик Минск,
+Выездной ремонт Минск,
+Ремонт электропроводки Минск,
+Автоэлектрик на дом Минск,
+Услуги автоэлектрика в Минске,
+Автоэлектрик,
+Выездной ремонт,
+Ремонт электропроводки,
+Автосервис Минск,
+Авторемонт Минск,
+естарт,
+естарт бай,
+Экстренный выезд автоэлектрика,
+Экспертная диагностика автоэлектрики,
+Автоэлектрик на дом,
+Срочная установка автоэлектроники,
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+estart,
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+
+  <meta property="og:title" content="Автоэлектрик Минск">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services/repair_electricity.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
+
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="../../css/services/repair_electrycity.css">
@@ -67,10 +98,15 @@
     <h2>Автоэлектрик:</h2>
   </div>
   <p>
-    В современную систему входят разные узлы электрики, неисправность которых сильно влияет и осложняет
-    работу автомобиля. Обычно электрическое оборудование ломается из-за: естественного износа, высоких нагрузок, коротких замыканий,
-    окисления контактов, неправильной эксплуатации, механических повреждений или вмешательства в
-    электрику автомобиля неопытными людьми.
+    <b>Автоэлектрик</b> - это специалист, который занимается ремонтом и обслуживанием электрических систем автомобиля.
+    В современную систему входят разные узлы электрики, неисправность которых может сильно влиять на работу автомобиля.
+    Обычно электрическое оборудование ломается из-за естественного износа, высоких нагрузок, коротких замыканий, окисления контактов, неправильной эксплуатации, механических повреждений или вмешательства в электрику автомобиля неопытными людьми.
+    <br> <br>
+    Симптомы поломки электрики могут включать горящий индикатор на панели приборов или код ошибки, выдаваемый бортовым компьютером, тишина при запуске авто, странные звуки при запуске и шум от работы генератора, частые перегорания лампочек в салоне, основном освещении или габаритных огней, подгоревшие провода или сгоревшие предохранители, проблемы в работе мультимедийной системы, нестабильная работа зажигания автомобиля, быстрая разрядка аккумулятора и неправильный функционал электрических систем автомобиля. Если вы заметили какие-либо из этих признаков, то рекомендуется обратиться к специалистам. Наш автосервис предоставляет услуги по ремонту и обслуживанию электрических систем любых марок автомобилей. Наши опытные мастера быстро и качественно проведут диагностику и ремонт электрических систем вашего автомобиля.
+
+    <br>
+    <br>
+    Мы используем только качественные запчасти и современное оборудование, чтобы обеспечить долгую и надежную работу вашего автомобиля.
   </p>
   <h4>Симптомы поломки электрики</h4>
   <ol>
@@ -198,7 +234,6 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
-          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
           <li><a href="diagnostika.html">Диагностика</a></li>
