--- a/pages/services/repair_engine.html
+++ b/pages/services/repair_engine.html
@@ -3,17 +3,43 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ремонт двигателя</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ремонт двигателя | Estart.by</title>
+  <meta name="description" content="Проблемы с двигателем? Не можете завести машину? Мы — ваш надежный партнер в Минске для выездного ремонта и запуска двигателя!
+  Опытные мастера, гарантированное качество и справедливые цены. Не теряйте времени, звоните сейчас и доверьте ремонт профессионалам!"
+  >
+  <meta name="keywords" content="
+Специализированный ремонт двигателя Минск,
+Запуск двигателя после зимы в Минске,
+Комплексный выездной ремонт двигателя Минск,
+Гарантия на ремонт двигателя в Минске,
+Стоимость выездного ремонта двигателя Минск,
+Ремонт двигателя Минск,
+Запуск двигателя Минск,
+Выездной ремонт двигателя в Минске,
+Мастерская по ремонту двигателей Минск,
+Диагностика и ремонт двигателя в Минске,
+Ремонт двигателя,
+Запуск двигателя,
+Выездной ремонт,
+Ремонт авто Минск,
+Автосервис Минск,
+СТО,
+естарт,
+естарт бай,
+estart,
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Быстрый запуск двигателя в Минске">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services/repair_engine.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="../../css/services/repair_starter.css">
@@ -67,10 +93,15 @@
     <h2>Ремонт Двигателя</h2>
   </div>
   <p>
-    Двигатель - сердце автомобиля. Чтобы Ваш автомобиль Вас не подставлял в самый нужный момент или
-    чтобы Вы могли долгое время ездить не беспокоясь, что автомобиль резко заглохнет и не заведется..
-    необходимо производить ТО автомобиля, или ежемесячную диагностику. Своевременно менять масло и в общем
-    бережно относиться к своему железному коню!
+    <b>Ремонт двигателя</b> - это важная процедура, которая позволяет поддерживать работоспособность автомобиля.
+    <br> <br>
+    Двигатель - это сердце автомобиля, и его правильная работа напрямую влияет на производительность и безопасность вашего автомобиля. Если вы заметили признаки неисправности двигателя, такие как высокий расход масла на 1000 км, повышенный расход топлива, снижение мощности, скрежущие или щелкающие звуки, нагар и масло на свечах зажигания, частый перегрев, низкое давление масла в системе, нестабильная работа, заводится с большим усилием, увеличение дымности через выхлопную систему, появился запах горелого масла, пропала компрессия в цилиндрах или мотор глохнет во время езды, то необходимо обратиться к специалистам.
+    <br> <br>
+    Наш автосервис предоставляет услуги по ремонту двигателей любых марок автомобилей. Наши опытные мастера быстро и качественно проведут диагностику и ремонт двигателя вашего автомобиля. Мы используем только качественные запчасти и современное оборудование, чтобы обеспечить долгую и надежную работу вашего автомобиля.
+    <br> <br>
+    Признаки неисправности двигателя могут быть различными. Они включают в себя высокий расход масла на 1000 км, повышенный расход топлива, снижение мощности, скрежущие или щелкающие звуки, нагар и масло на свечах зажигания, частый перегрев, низкое давление масла в системе, нестабильная работа, заводится с большим усилием, увеличение дымности через выхлопную систему, появился запах горелого масла, пропала компрессия в цилиндрах или мотор глохнет во время езды.
+    <br> <br>
+    Не откладывайте ремонт двигателя на потом! Обращайтесь к нам прямо сейчас и получите профессиональную помощь в поддержании работоспособности вашего автомобиля.
   </p>
   <h4>Признаки неисправности двигателя:</h4>
   <ol>
@@ -208,7 +239,6 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
-          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
           <li><a href="diagnostika.html">Диагностика</a></li>
