--- a/pages/services/repair_starter.html
+++ b/pages/services/repair_starter.html
@@ -3,17 +3,43 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Ремонт стартера</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ремонт стартера | Estart.by </title>
+  <meta name="description" content="Ищете надежный сервис по ремонту стартера в Минске? Мы предлагаем выездной ремонт с гарантией качества! Опытные мастера, доступные цены и быстрый ремонт на месте.
+  Не откладывайте, звоните сейчас и доверьте свой автомобиль профессионалам!"
+  >
+  <meta name="keywords" content="
+Ремонт стартера Минск специализированный сервис,
+Качественный выездной ремонт стартера Минск,
+Стоимость ремонта стартера в Минске,
+Гарантия на ремонт стартера Минск,
+Срочный ремонт стартера на дому в Минске,
+Ремонт стартера в Минске,
+Выездной ремонт стартера Минск,
+Диагностика и ремонт стартера Минск,
+Замена стартера в Минске,
+Сервис ремонта стартеров Минск,
+Ремонт стартера,
+замена стартера,
+Стартер Минск,
+Ремонт Минск,
+Выездной ремонт,
+Ремонт авто Минск,
+естарт,
+естарт бай,
+estart,
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Быстрый ремонт Стартера а в Минске">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services/repair_starter.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="../../css/services/repair_starter.css">
@@ -63,17 +89,21 @@
 
 <div class="main-content">
   <div class="main-content__title">
-    <h2>Ремонт стартера:</h2>
+    <h2>Ремонт стартера: запускайте Ваш автомобиль с первого раза</h2>
   </div>
   <p>
-    Стартер - это небольшая, но очень важная деталь автомобиля, без которой Вы его не заведёте.
-    Главная задача стартера - механический запуск двигателя. Но бывает, что при запуске автомобиля, никакой реакции
-    не происходит, и это не может не расстраивать.
+    <b>Ремонт стартера</b> - это важная процедура, которая позволяет поддерживать быстрый запуск Вашего автомобиля. <b>Стартер </b> - это небольшая, но очень важная деталь автомобиля, без которой Вы его не заведёте.
+
     <br>
-    Причин тому может быть большое количество, и для точного диагноза не работы стартера необходимо просмотреть их все.
-    Начинать нужно с самого банального - это погодных условий. Если отказ произошёл в сильный мороз, то возможно
-    масло стало слишком вязким. Если температура воздуха очень высокая, то вероятно проблемы с бензонасосом.
-    Но возможно дело в совершенно в ином, и для решения проблемы необходимо произвести диагностику.
+    <br>Главная задача стартера - механический запуск двигателя. Но бывает, что при запуске автомобиля, никакой реакции не происходит, и это не может не расстраивать.
+    <br><br>
+
+    Причин тому может быть большое количество, и для точного диагноза неисправности стартера необходимо просмотреть их все. Начинать нужно с самого банального - это погодных условий. Если отказ произошёл в сильный мороз, то возможно масло стало слишком вязким. Если температура воздуха очень высокая, то вероятно проблемы с бензонасосом. Однако, если стартер не работает из-за других причин, то мастера нашего автосервиса быстро и качественно проведут диагностику и ремонт стартера Вашего автомобиля.
+    <br> <br>
+
+    Признаки неисправности стартера могут быть различными. Они включают в себя отсутствие реакции стартера при включении зажигания, слышны щелчки стартера, стартер вращается с характерным звуком, но двигатель не заводится, после запуска двигателя - стартер не выключается и продолжает крутиться или сильный скрежет и шум во время срабатывания.
+
+    <b>Не откладывайте ремонт стартера на потом!</b> Обращайтесь к нам прямо сейчас и получите профессиональную помощь в поддержании работоспособности вашего автомобиля.
   </p>
   <h4>Признаки неисправности стартера:</h4>
   <ol>
@@ -176,7 +206,6 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
-          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
           <li><a href="diagnostika.html">Диагностика</a></li>
