--- a/pages/services/viezdnoy_remont.html
+++ b/pages/services/viezdnoy_remont.html
@@ -3,17 +3,45 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Выездной ремонт</title>
-  <meta name="description" content="">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Выездной ремонт | Estart.by</title>
+  <meta name="description" content="Нужен срочный ремонт автомобиля в Минске? Откладывать больше не нужно!
+  Наш выездной автосервис предлагает быструю и качественную помощь прямо на месте.
+  Экономьте время и деньги — профессиональные мастера с современным оборудованием приедут к вам и все исправят.
+  Звоните сейчас и получите бесплатную консультацию!"
+  >
+  <meta name="keywords" content="
+Выездной ремонт автомобилей в Минске с гарантией,
+Профессиональный выездной авторемонт Минск,
+Экстренный выездной ремонт авто Минск,
+Выездной ремонт иномарок в Минске,
+Выездной ремонт двигателя авто в Минске,
+Выездной ремонт авто Минск цены,
+Выездной автосервис Минск,
+Выездной ремонт стартера Минск,
+Выездной ремонт генератора Минск,
+Выездной ремонт подвески Минск,
+Выездной ремонт Минск,
+Авторемонт на дому Минск,
+Мобильный автосервис Минск,
+Ремонт авто на месте Минск,
+Срочный ремонт авто Минск,
+выездной ремонт авто,
+выездной ремонт автомобилей,
+выездной ремонт машин,
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+">
+  <meta name="viewport"
+        content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="manifest" href="site.webmanifest">
-  <link rel="apple-touch-icon" href="icon.png">
+  <meta property="og:title" content="Выездной ремонт Вашего авто в Минске!">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services/viezdnoy_remont.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
+
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="../../css/services/viezdnoy_remont.css">
@@ -65,10 +93,9 @@
     <h2>Выездной ремонт автомобиля в Минске</h2>
   </div>
   <p>
-    Компания Estart осуществляет выездной ремонт автомобиля в Минске. Если Ваш автомобиль перестал заводиться, а Вам нужно скоро
-    уезжать, а эвакуатор дорого? Не беда! Мы выезжаем на место поломки авто, где бы оно не остановилось (в Минске) и на
-    месте производим ремонт и через ~ 5 часов Вы сможете уехать самостоятельно, сэкономив ваше драгоценное время и 100 рублей
-    на эвакуацию вашего автомобиля
+    Компания Estart предоставляет услуги выездного ремонта автомобилей в Минске. Если ваш автомобиль не заводится, мы можем приехать на место поломки и произвести ремонт на месте.
+    Мы гарантируем быстрый ремонт, который займет не более 5 часов, при наличии запчастей и благоприятных погодных условиях.
+    Вы сможете сэкономить свое время и деньги, так как мы выезжаем в любую точку Минска.
   </p>
   <h4>Плюсы выездного ремонта</h4>
   <ol>
@@ -76,7 +103,7 @@
     <li>Быстрый ремонт автомобиля на месте его поломки</li>
     <li>Ремонт автомобиля от 5 часов, при наличии запчастей и благоприятных погодных условиях</li>
     <li>Экономия денег</li>
-    <li>Экономия времени (как минимум 5 дней)</li>
+    <li>Экономия времени (как минимум 3 дня)</li>
     <li>Вы можете оставить нашего механика с Вашим автомобилем, а сами заниматься своими делами</li>
     <li>Прозрачность работы - Вы можете наблюдать, как механик ремонтирует Ваш автомобиль,
     и в интересующих Вас моментах уточнять детали работы</li>
@@ -186,7 +213,6 @@
         <h4>Популярные услуги</h4>
         <ul>
           <li><a href="viezdnoy_remont.html">Выездной ремонт</a></li>
-          <li><a href="../argon_svarka.html">Аргонная сварка</a></li>
           <li><a href="repaier_alternator.html">Ремонт генератора</a></li>
           <li><a href="repair_starter.html">Ремонт стартера</a></li>
           <li><a href="diagnostika.html">Диагностика</a></li>
