Подтверждение прав на https://estart.by/index.html

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@ Estart
 
   <meta name="twitter:label1" content="Примерное время для чтения"/>
   <meta name="twitter:data1" content="3 минуты"/>
+  <meta name="yandex-verification" content="316a51fa0b10f897" />
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
