Исправлены ошибки в описании и оптимизированны ключевые слова

--- a/pages/services/diagnostika.html
+++ b/pages/services/diagnostika.html
@@ -5,20 +5,28 @@
 <head>
   <meta charset="utf-8">
   <title>Диагностика | Estart.by</title>
-  <meta name="description" content="">
+  <meta name="description" content="Горят ошибки на приборной панели? Не беда! Мастер приедет к Вам и устранит проблемы в кратчайшие сроки. Звоните!">
   <meta name="keywords" content="
-
+диагностика,
+авто,
+выезд,
+диагностика автомобиля на выезде,
+выездная диагностика авто,
+минск,
+цена,
+срочно
 ">
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <meta property="og:title" content="">
-  <meta property="og:type" content="">
-  <meta property="og:url" content="">
-  <meta property="og:image" content="">
+  <meta property="og:title" content="Диагностика авто в Минске">
+  <meta property="og:type" content="article">
+  <meta property="og:url" content="https://estart.by/pages/services/diagnostika.html">
+  <meta property="og:image" content="https://estart.by/img/estart/estart_logo.png">
+  <meta property="og:site_name" content="Estart.by"/>
 
-  <link rel="manifest" href="site.webmanifest">
+  <link rel="manifest" href="/site.webmanifest">
   <link rel="apple-touch-icon" href="../../icon.png">
   <!-- Place favicon.ico in the root directory -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
